Refactor: Use `List.of` instead of `Arrays.asList` in `HuaweiHomeBadger`.